# AI-Video-Transcription

./: .env.example  .gitignore  README.md  agent.py  index.html  pyproject.toml  requirements.txt  tools.py  vercel.json
api/: transcribe.py
knowledge_base/: sample_transcript.md
tests/: test_agent.py
